# AdversarialBP

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  experiment.py  main.py  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
AdversarialBP/AdversialBP/adversarial_generation/: adversarial_example_generation.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__-GHUM-L-E3172VS1.py  __init__.py  cli.py
src/AdversialBP/: AdversialBP.py  __init__.py
src/adversarialBP/: __init__.py
src/adversarialBP/autoencoder/: VAE.py
src/adversarialBP/evaluation/: __init__.py  benchmark.py
src/adversarialBP/evaluation/catalog/: __init__.py  distance.py  redundancy.py  success_rate.py  time.py  ynn.py
src/adversarialBP/generation_methods/: AdversarialREVISE.py  __init__.py
src/adversarialBP/models/: GAN.py  LSTM.py  MLmodel.py  train_DL_model.py
src/adversarialBP/models/Bayesian/: BNN.py  ConcreteDropout.py
src/best_manifolds/production_deviant/: LSTM_VAE_0.001_16_RMSprop_16_epoch99.pt.pt
src/best_manifolds/production_regular/: LSTM_VAE_0.01_16_Nadam_32_epoch51.pt.pt
src/datasets/saved/sepsis_cases_2/: BNN_train_['last_event', 'Activity', 'regular'].csv  (+1 more)
src/experiments/: experiment.py
src/results/: results_sepsis_cases_2_100_regular.csv  results_sepsis_cases_2_10_regular.csv
src/util/: BNN_uncertainty.py  DatasetManager.py  EncoderFactory.py  load_dataset.py  load_model.py  settings.py
tests/: __init__.py  test_AdversialBP.py
(+35 files in other folders)
